# mindfulnotes

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md
backend/scripts/: notes-analyze-test.sh  notes-basic-test.sh  notes-examples.sh
backend/sql/: schema.sql
backend/src/: config.rs  main.rs  models.rs  notes.rs  routes.rs
frontend/: README.md  package-lock.json  package.json
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/src/: App.tsx
frontend/src/components/: AIGenerator.tsx  ConfirmationModal.tsx  NoteAnalyzer.tsx  NoteEditor.tsx  NotesList.tsx
frontend/src/styles/: spinner.css
frontend/src/types/: Note.ts
frontend/src/utils/: api.ts
