[package]
name = "mindfulnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
