[package]
name = "mindfulnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
axum = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
